macros/tests/schema_ui/fail_query_type_mismatch.rs
use surql_macros::surql_query;

fn main() {
	// age is int in schema, but providing bool
	let _sql = surql_query!(
		"SELECT * FROM user WHERE age > $min",
		min: bool,
		schema = "surql_fixtures/"
	);
}
